--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
-.active > a{
-    background-color: black;
+.nav-pills .nav-link.active {
+    background-color: black !important;
+    color: white;
+}
+.nav-pills .nav-link:not(.active) {
+    color: black !important;
 }
